# routes/index.js
@@ -1,3 +1,5 @@
+const passport = require("passport");
+
 const router = require("express").Router();
 
 router.use("/", require("./swagger"));
@@ -9,4 +11,13 @@ router.get("/", (req, res) => {
 
 router.use("/clients", require("./clients"));
 router.use("/jobs", require("./jobs"));
+
+router.get('/login', passport.authenticate('github'), (req, res) => {})
+
+router.get('/logout', function(req, res, next){
+  req.logout(function(err) {
+    if(err){ return next(err);}
+    res.redirect('/')
+  })
+})
 module.exports = router;
